--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~normalize.css";
+@import "variables";
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800&display=swap&family=Open+Sans&display=swap");
+
+html {
+    font-size: 62.5%;
+}
+
